docs: alterar icones e inserir fonte

--- a/index.html
+++ b/index.html
@@ -5,21 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cards Responsivos</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <main class="cards">
-        
-        <sectios class="card">
+        <section class="card">
+            <img src="assets/img/violao.png" alt="Ícone violão.">
+            <h3>Violão</h3>
+            <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</span>
+            <button>Saiba mais</button>
+        </section>
 
-        </sectios>
+        <section class="card">
+            <img src="assets/img/piano.png" alt="ícone piano.">
+            <h3>Piano</h3>
+            <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</span>
+            <button>Saiba mais</button>
+        </section>
 
-        <sectios class="card">
-
-        </sectios>
-
-        <sectios class="card">
-
-        </sectios>
+        <section class="card">
+            <img src="assets/img/violino.png" alt="ícone violino.">
+            <h3>Violino</h3>
+            <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</span>
+            <button>Saiba mais</button>
+        </section>
     </main>
 </body>
 </html>
