--- a/index.html
+++ b/index.html
@@ -12,22 +12,26 @@
 </head>
 <body>
     <main class="cards">
-        <section class="card">
-            <img src="assets/img/violao.png" alt="Ícone violão.">
+        <section class="card contact">
+            <div class="icon">
+                <img src="assets/img/violao.png" alt="Ícone violão.">
+            </div>
             <h3>Violão</h3>
             <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</span>
             <button>Saiba mais</button>
         </section>
-
-        <section class="card">
-            <img src="assets/img/piano.png" alt="ícone piano.">
+        <section class="card shop">
+            <div class="icon">
+                <img src="assets/img/piano.png" alt="ícone piano.">
+            </div>
             <h3>Piano</h3>
             <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</span>
             <button>Saiba mais</button>
         </section>
-
-        <section class="card">
-            <img src="assets/img/violino.png" alt="ícone violino.">
+        <section class="card about">
+            <div class="icon">
+                <img src="assets/img/violino.png" alt="ícone violino.">
+            </div>
             <h3>Violino</h3>
             <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</span>
             <button>Saiba mais</button>
