docs: inserir cor botoes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <main class="cards">
-        <section class="card contact">
+        <section class="card violao">
             <div class="icon">
                 <img src="assets/img/violao.png" alt="Ícone violão.">
             </div>
@@ -20,7 +20,7 @@
             <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</span>
             <button>Saiba mais</button>
         </section>
-        <section class="card shop">
+        <section class="card piano">
             <div class="icon">
                 <img src="assets/img/piano.png" alt="ícone piano.">
             </div>
@@ -28,7 +28,7 @@
             <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</span>
             <button>Saiba mais</button>
         </section>
-        <section class="card about">
+        <section class="card violino">
             <div class="icon">
                 <img src="assets/img/violino.png" alt="ícone violino.">
             </div>
